add lunar date.

--- a/src/templates/clock.html
+++ b/src/templates/clock.html
@@ -51,7 +51,9 @@
     Today is {{ days[ date.getDay() ] }}
     the {{ addSuffix( date.getDate() ) }}
     of {{ months[ date.getMonth() ] }}.
-
+    <br>
+    农历: {{lunar.lunarYear}}年{{lunar.lunarMonth}}月{{lunar.lunarDay}}日
+    <br>
     The time is:
   </p>
 
