add log component.

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,4 @@
 @import '../../bower_components/foundation/scss/normalize';
 @import '../../bower_components/foundation/scss/foundation';
 @import './clock.scss';
+@import './log.scss';
