add todoist component

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,3 +2,4 @@
 @import '../../bower_components/foundation/scss/foundation';
 @import './clock.scss';
 @import './log.scss';
+@import './todoist.scss';
